2013-10-21  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* gdb.base/gnu_vector.exp: Care about endianness when casting
	scalars to vectors.

2013-10-18  Tom Tromey  <tromey@redhat.com>

	* lib/gdb.exp (build_executable_from_specs): Remove duplicate set
	of "binfile".

2013-10-18  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.base/watchpoints.exp: Add test for setting software
	watchpoints of different types before starting the inferior.

2013-10-18  Pedro Alves  <palves@redhat.com>

	PR gdb/16062
	* gdb.threads/stepi-random-signal.c: New file.
	* gdb.threads/stepi-random-signal.exp: New file.

2013-10-17  Maciej W. Rozycki  <macro@codesourcery.com>

	* gdb.mi/mi-breakpoint-changed.exp (test_insert_delete_modify):
	Fix comment typo.
	* lib/gdb.exp (gdb_init): Likewise.

2013-10-17  Tom Tromey  <tromey@redhat.com>

	* gdb.base/printcmds.exp (test_printf): Test printf flushing.

2013-10-14  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/dwzbuildid.exp (write_dwarf_file): Pass explicit test
	name to gdb_test_no_output.

2013-10-13  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Canonicalize directories for EXEC_FILENAME.
	* gdb.base/argv0-symlink.exp
	(kept file symbolic link name for info inferiors): New.
	(kept directory symbolic link name): Setup kfail.
	(kept directory symbolic link name for info inferiors): New.

2013-10-11  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* gdb.arch/s390-multiarch.exp: New file.
	* gdb.arch/s390-multiarch.c: New file.

2013-10-11  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/mi_catch_ex.exp: Adjusts all "catch ..." tests to
	use the appropriate GDB/MI command instead, and verify
	the test output.

2013-10-11  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/source-nofile.gdb: New file.
	* gdb.base/source.exp: Add two tests verifying the behavior when
	the "source" command is given a non-existant filename.

2013-10-11  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-catch-load.c: Remove the include of "dlfcn.h".