@@ -50,7 +50,7 @@ char *argv[], **envp;
 #endif
 {
 #ifdef FAKEARGV
-    printf ("%d\n", factorial (1));
+    printf ("%d\n", factorial (1)); /* commands.exp: hw local_var out of scope */
 #else    
     if (argc != 2) {
 	printf ("usage:  factorial <number>\n");
@@ -75,4 +75,4 @@ int factorial (value) int value;
     }
     local_var = value;
     return (value);
-}
+} /* commands.exp: local_var out of scope  */
